Grab Bag Changes

--- a/index.html
+++ b/index.html
@@ -633,158 +633,206 @@
             <div class="line"></div>
 
             <h3 id="vipGrabBags" class="anchor">Vip Grab Bags</h3>
+            <!-- Start Grab Bags -->
             <div class="panel-group" id="accordion">
-                <div class="panel panel-default">
-                  <div class="panel-heading accordion-border">
-                    <h5 class="panel-title">
-                      <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-                      May 2020</a>
-                    </h5>
-                  </div>
-                  <div id="collapse1" class="panel-collapse collapse in">
-                    <div class="panel-body accordion-border">
-                        <ul class="light-grey-text">
-                            <li>1 Berserker Potion Pack</li>
-                            <li>3 Summon Corpse</li>
-                            <li>1 Greater Potion Pack</li>
-                            <li>2 Broken Finger Access</li>
-                            <li>2 Lair of Minos Access</li>
-                            <li>1 Item NO-DROP</li>
-                            <li>2 Drop Rate Increase</li>
-                        </ul>
+              <div class="panel panel-default">
+                <div class="panel-heading accordion-border">
+                  <h5 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#grabBag2020">
+                    2020 Grab Bags</a>
+                  </h5>
+                </div>
+                <div id="grabBag2020" class="panel-collapse collapse in">
+                  <div class="panel-body accordion-border">
+                    <div class="panel panel-default">
+                      <div class="panel-heading accordion-border">
+                        <h5 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#may2020">
+                          May 2020</a>
+                        </h5>
+                      </div>
+                      <div id="may2020" class="panel-collapse collapse in">
+                        <div class="panel-body accordion-border">
+                            <ul class="light-grey-text">
+                                <li>1 Berserker Potion Pack</li>
+                                <li>3 Summon Corpse</li>
+                                <li>1 Greater Potion Pack</li>
+                                <li>2 Broken Finger Access</li>
+                                <li>2 Lair of Minos Access</li>
+                                <li>1 Item NO-DROP</li>
+                                <li>2 Drop Rate Increase</li>
+                            </ul>
+                        </div>
+                      </div>
                     </div>
+                    <div class="panel panel-default">
+                      <div class="panel-heading accordion-border">
+                        <h5 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#june2020">
+                          June 2020</a>
+                        </h5>
+                      </div>
+                      <div id="june2020" class="panel-collapse collapse">
+                        <div class="panel-body accordion-border">
+                            <ul class="light-grey-text">
+                                <li>2 Greater Potion Packs</li>
+                                <li>2 Broken Finger Access Tickets</li>
+                                <li>3 Item Restoration Packs</li>
+                                <li>3 Personal Power Hours</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel panel-default">
+                      <div class="panel-heading accordion-border">
+                        <h5 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#july2020">
+                          July 2020</a>
+                        </h5>
+                      </div>
+                      <div id="july2020" class="panel-collapse collapse">
+                        <div class="panel-body accordion-border">
+                            <ul class="light-grey-text">
+                                <li>2 Item Rename</li>
+                                <li>1 Chest of Holding</li>
+                                <li>2 Summon Corpse</li>
+                                <li>2 Item Restoration Pack</li>
+                                <li>2 Personal Power Hour</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading accordion-border">
+                          <h5 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#august2020">
+                            August 2020</a>
+                          </h5>
+                        </div>
+                        <div id="august2020" class="panel-collapse collapse">
+                          <div class="panel-body accordion-border">
+                              <ul class="light-grey-text">
+                                  <li>2 Rune Shards</li>
+                                  <li>2 Summon Corpse</li>
+                                  <li>2 Boost Alignment</li>
+                                  <li>1 Item Rename</li>
+                                  <li>1 Dragon Mask Pack</li>
+                                  <li>1 Greater Potion Pack</li>
+                              </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="panel panel-default">
+                        <div class="panel-heading accordion-border">
+                          <h5 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#september2020">
+                            September 2020</a>
+                          </h5>
+                        </div>
+                        <div id="september2020" class="panel-collapse collapse">
+                          <div class="panel-body accordion-border">
+                              <ul class="light-grey-text">
+                                  <li>1 Orb Reset</li>
+                                  <li>2 Berserker Potion Packs</li>
+                                  <li>2 Greater Potion Packs</li>
+                                  <li>4 Drop Rate Increases</li>
+                              </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="panel panel-default">
+                        <div class="panel-heading accordion-border">
+                          <h5 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#october2020">
+                            October 2020</a>
+                          </h5>
+                        </div>
+                        <div id="october2020" class="panel-collapse collapse">
+                          <div class="panel-body accordion-border">
+                              <ul class="light-grey-text">
+                                  <li>5 Berserker Potions</li>
+                                  <li>1 Item No Drop Remove</li>
+                                  <li>2 Rune Shards</li>
+                                  <li>1 Jail Pardon</li>
+                                  <li>3 Drop Rate Increase</li>
+                              </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="panel panel-default">
+                        <div class="panel-heading accordion-border">
+                          <h5 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#november2020">
+                            November 2020</a>
+                          </h5>
+                        </div>
+                        <div id="november2020" class="panel-collapse collapse">
+                          <div class="panel-body accordion-border">
+                              <ul class="light-grey-text">
+                                  <li>3 Item Rename</li>
+                                  <li>1 Chest of Holding</li>
+                                  <li>2 Summon Corpse</li>
+                                  <li>1 Item Restore Tool</li>
+                                  <li>4 Personal Power Hour</li>
+                              </ul>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="panel panel-default">
+                        <div class="panel-heading accordion-border">
+                          <h5 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#december2020">
+                            December 2020</a>
+                          </h5>
+                        </div>
+                        <div id="december2020" class="panel-collapse collapse">
+                          <div class="panel-body accordion-border">
+                              <ul class="light-grey-text">
+                                  <li>1 Orb Reset</li>
+                                  <li>1 Race/Gender Change</li>
+                              </ul>
+                          </div>
+                        </div>
+                      </div>             
                   </div>
                 </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading accordion-border">
-                    <h5 class="panel-title">
-                      <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
-                      June 2020</a>
-                    </h5>
-                  </div>
-                  <div id="collapse2" class="panel-collapse collapse">
-                    <div class="panel-body accordion-border">
-                        <ul class="light-grey-text">
-                            <li>2 Greater Potion Packs</li>
-                            <li>2 Broken Finger Access Tickets</li>
-                            <li>3 Item Restoration Packs</li>
-                            <li>3 Personal Power Hours</li>
-                        </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                  <div class="panel-heading accordion-border">
-                    <h5 class="panel-title">
-                      <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-                      July 2020</a>
-                    </h5>
-                  </div>
-                  <div id="collapse3" class="panel-collapse collapse">
-                    <div class="panel-body accordion-border">
-                        <ul class="light-grey-text">
-                            <li>2 Item Rename</li>
-                            <li>1 Chest of Holding</li>
-                            <li>2 Summon Corpse</li>
-                            <li>2 Item Restoration Pack</li>
-                            <li>2 Personal Power Hour</li>
-                        </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="panel panel-default">
-                    <div class="panel-heading accordion-border">
-                      <h5 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-                        August 2020</a>
-                      </h5>
-                    </div>
-                    <div id="collapse4" class="panel-collapse collapse">
-                      <div class="panel-body accordion-border">
-                          <ul class="light-grey-text">
-                              <li>2 Rune Shards</li>
-                              <li>2 Summon Corpse</li>
-                              <li>2 Boost Alignment</li>
-                              <li>1 Item Rename</li>
-                              <li>1 Dragon Mask Pack</li>
-                              <li>1 Greater Potion Pack</li>
-                          </ul>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="panel panel-default">
-                    <div class="panel-heading accordion-border">
-                      <h5 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">
-                        September 2020</a>
-                      </h5>
-                    </div>
-                    <div id="collapse5" class="panel-collapse collapse">
-                      <div class="panel-body accordion-border">
-                          <ul class="light-grey-text">
-                              <li>1 Orb Reset</li>
-                              <li>2 Berserker Potion Packs</li>
-                              <li>2 Greater Potion Packs</li>
-                              <li>4 Drop Rate Increases</li>
-                          </ul>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="panel panel-default">
-                    <div class="panel-heading accordion-border">
-                      <h5 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse6">
-                        October 2020</a>
-                      </h5>
-                    </div>
-                    <div id="collapse6" class="panel-collapse collapse">
-                      <div class="panel-body accordion-border">
-                          <ul class="light-grey-text">
-                              <li>5 Berserker Potions</li>
-                              <li>1 Item No Drop Remove</li>
-                              <li>2 Rune Shards</li>
-                              <li>1 Jail Pardon</li>
-                              <li>3 Drop Rate Increase</li>
-                          </ul>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="panel panel-default">
-                    <div class="panel-heading accordion-border">
-                      <h5 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse7">
-                        November 2020</a>
-                      </h5>
-                    </div>
-                    <div id="collapse7" class="panel-collapse collapse">
-                      <div class="panel-body accordion-border">
-                          <ul class="light-grey-text">
-                              <li>3 Item Rename</li>
-                              <li>1 Chest of Holding</li>
-                              <li>2 Summon Corpse</li>
-                              <li>1 Item Restore Tool</li>
-                              <li>4 Personal Power Hour</li>
-                          </ul>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="panel panel-default">
-                    <div class="panel-heading accordion-border">
-                      <h5 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse8">
-                        December 2020</a>
-                      </h5>
-                    </div>
-                    <div id="collapse8" class="panel-collapse collapse">
-                      <div class="panel-body accordion-border">
-                          <ul class="light-grey-text">
-                              <li>1 Orb Reset</li>
-                              <li>1 Race/Gender Change</li>
-                          </ul>
-                      </div>
-                    </div>
-                  </div>
               </div>
+              <!-- End Grab Bag 2020 -->
+              <!-- Start Grab Bag 2021 -->
+              <div class="panel panel-default">
+                <div class="panel-heading accordion-border">
+                  <h5 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#grabBag2021">
+                    2021 Grab Bags</a>
+                  </h5>
+                </div>
+                <div id="grabBag2021" class="panel-collapse collapse">
+                  <div class="panel-body accordion-border">
+                    <div class="panel panel-default">
+                      <div class="panel-heading accordion-border">
+                        <h5 class="panel-title">
+                          <a data-toggle="collapse" data-parent="#accordion" href="#january2021">
+                          January 2021</a>
+                        </h5>
+                      </div>
+                      <div id="january2021" class="panel-collapse collapse">
+                        <div class="panel-body accordion-border">
+                            <ul class="light-grey-text">
+                                <li>4 Summon corpses</li>
+                                <li>3 Lair of Minos Access Passes</li>
+                                <li>2 Greater Potion Packs</li>
+                                <li>1 Deluxe Mask Pack</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- End Grab Bag 2021 -->            
+                  
+              </div>
+              <!-- End Grab Bags -->
             
             <div class="line"></div>
 
