--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -3473,8 +3473,166 @@
                 </div>
               </div>
             </div>
-            <!-- End of Carpentry Trainer  --> 
-            
+            <!-- End of Tailoring Trainer  --> 
+            <!-- Start of Farming Trainer  -->
+            <div class="card bg-main half-width mb-5">
+              <div class="card-header">
+                <h2 id="farmingTrainer" class="anchor text-center">Farming</h2>
+              </div>
+              <div>
+                <div class="card-body">
+                  <table class="table table-sm table-bordered text-center">
+                    <thead class="thead-light">
+                      <tr>
+                        <th>Difficulty</th>
+                        <th>Skills</th>
+                      </tr>   
+                    </thead>
+                        <tr>   
+                        <td>Apprentice</td>
+                        <td>Foraging, Harvesting, Planting</td>
+                      </tr>  
+                  </table>
+                  <table class="table table-sm table-bordered text-center">
+                    <thead class="thead-light">
+                      <tr>
+                        <th>NPC Quest Start</th>
+                        <th>Items Received</th>
+                      </tr>  
+                      </thead>
+                      <tr>    
+                        <td>Farming Trainer</td> 
+                        <td>
+                          <img class="thumbnail-img" src="Images/Valinor/TradeSkills/Farm_Scythe.png" alt="Farm Scythe" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-tooltip-img' src='Images/Valinor/TradeSkills/Farm_Scythe_ScreenTip.png' alt='Farm Scythe'>">
+                          <img class="thumbnail-img" src="Images/Valinor/TradeSkills/Foraging_Stick.png" alt="Foraging Stick" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-tooltip-img' src='Images/Valinor/TradeSkills/Foraging_Stick_ScreenTip.png' alt='Foraging Stick'>">
+                          <img class="thumbnail-img" src="Images/Valinor/TradeSkills/Shovel.png" alt="Shovel" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-tooltip-img' src='Images/Valinor/TradeSkills/Shovel_ScreenTip.png' alt='Shovel'>">
+                          <img class="thumbnail-img" src="Images/Valinor/TradeSkills/Farming_Guidebook.png" alt="Farming Guidebook" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-item-tooltip-img' src='Images/Valinor/TradeSkills/Farming_Guidebook_ScreenTip.png' alt='Farming Guidebook'>">
+                        </td> 
+                      </tr>                         
+                  </table>
+                  <table class="table table-sm table-bordered text-center">
+                    <thead class="thead-light">
+                      <tr>
+                        <th>Quest Stages</th>
+                      </tr>
+                    </thead>
+                    <tr>
+                      <td>6</td>
+                    </tr>
+                  </table>
+                  <hr>
+                  <h3 class="stages">Stage 1</h3>
+                  <p class="clearfix">
+                    <img class="npc-img" src="Images/Valinor/NPCS/Farming_Trainer.png"alt="Farming Trainer">
+                    Speak to <span class="light-red">Farming Trainer</span> he will give you your faming supplies. You aren't going to be growing much food if you don't get good at foraging for seeds. He tasks you to forage up 2 tomato seeds for him.                      
+                    <br>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Farming Training</span><span class="orange">, Return to the Farming Trainer with 2 foraged tomato seeds.</span>
+                    <br>
+                    Head out to a grassy spot and look for areas like this <img class="monster-img" src="Images/Valinor/TradeSkills/Foraging_Spots.png" alt="Foraging Spots"> Click on your foraging stick then on the differnt types of spots on the ground. When you are successful you will receve a seed. It is random on what seed you get.
+                    It can take a few tries to finaly get a <span class="light-green">Tomato Seed</span> <img src="Images/Valinor/TradeSkills/Tomato_Seed.png" alt="Tomato Seed"> When you have 2 Tomato Seeds you will be updated.
+                    <br>  
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Tomato Seed</span> to complete the quest.</span> Return to the <span class="light-red">Farming Trainer</span> to complete your task and start a new one.  
+                  </p>
+                  <hr> 
+                    <ul>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                    </ul>
+                  <hr>
+                  <h3 class="stages">Stage 2</h3>
+                  <p class="clearfix">
+                    The <span class="light-red">Tailoring Trainer</span> she needs some help spinning some thread. She needs 20 silk thread to sew her sister a new dress.  
+                    <br>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 20 Silk Threads.</span>
+                    <br>
+                    Spinning requires <span class="light-green">Raw Silk</span> and a spinning wheel. <img src="Images/Valinor/TradeSkills/Spinning_Wheel.png" alt="Spinning Wheel"> Click on the raw slik then the spinning wheel to begin spinning. If you are successful you will recieve Silk Thread. <img src="Images/Valinor/TradeSkills/Silk_Thread.png" alt="Silk Thread">    
+                    Once you have created all 20 Silk Thread you will be updated.     
+                    <br>
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Silk Thread</span> to complete the quest.</span> Return to the <span class="light-red">Tailoring Trainer</span> to complete your task and start a new one.  
+                  </p>
+                  <hr> 
+                    <ul>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                    </ul>
+                  <hr>
+                  <h3 class="stages">Stage 3</h3>
+                  <p class="clearfix">
+                    The <span class="light-red">Tailoring Trainer</span> she wants to test you skill at making silk cloth. Gather enough silk thread to weave 10 pieces of silk cloth.
+                    <br>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 10 pieces of Silk Cloth.</span>
+                    <br>
+                    Weaving silk cloth requries <span class="light-green">Silk Thread</span> and a Loom. <img src="Images/Valinor/TradeSkills/Loom.png" alt="Loom"> 
+                    Click on the silk thread then on the loom to weave the silk thread in to silk cloth. <img src="Images/Valinor/TradeSkills/Silk_Cloth.png" alt="Silk Cloth"> Once you create the 10 pieces of silk cloth you will be updated.
+                    <br>
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Silk Cloth</span> to complete the quest.</span> Return to the <span class="light-red">Tailoring Trainer</span> to complete your task and start a new one.  
+                  </p>
+                  <hr> 
+                    <ul>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                    </ul>
+                  <hr>
+                  <h3 class="stages">Stage 4</h3>
+                  <p class="clearfix">
+                    The <span class="light-red">Tailoring Trainer</span> she is in desperate need of silk bandages. Bring her back 20 bandages to help mend the troops. You will need a pair of scissors to get started with this task.  
+                    <hr>  
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Scissors</span></li>
+                        </ul>
+                    <hr>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 20 Silk Bandages.</span>
+                    <br>
+                    Sewing a silk bandages requires <span class="light-green">Silk Cloth</span> and <span class="light-green">Scissors</span>. <img src="Images/Valinor/TradeSkills/Scissors.png" alt="Scissors"> You will need level <span class="light-red">4</span> and <span class="light-red">1</span> Silk Cloth to craft the Silk Bandage.
+                    Click on the Scissors then on the Silk Cloth to open the crafting window. Click on <span class="light-red">Misc/Tools</span> then on the Silk Bandage. <img src="Images/Valinor/TradeSkills/Silk_Bandage.png" alt=""> Once you create 20 Silk Bandage you will be updated. 
+                    <br>
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Silk Bandage</span> to complete the quest.</span> Return to the <span class="light-red">Tailoring Trainer</span> to complete your task and start a new one.  
+                  </p>
+                  <hr> 
+                    <ul>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                    </ul>
+                  <hr>
+                  <h3 class="stages">Stage 5</h3>
+                  <p class="clearfix">
+                    The <span class="light-red">Tailoring Trainer</span> has tasked you to try your hand at making a silk cap. 
+                    <br>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 1 Silk Cap.</span>
+                    <br>
+                    Sewing a silk cap requires <span class="light-green">Silk Cloth</span> and <span class="light-green">Scissors</span>. <img src="Images/Valinor/TradeSkills/Scissors.png" alt="Scissors"> You will need level <span class="light-red">0</span> and <span class="light-red">1</span> silk Cloth to craft the Silk Cap.
+                    Click on the Scissors then on the Silk Cloth to oepn the crafting window. Click on <span class="light-red">Armour</span> then on the Silk Cap. <img src="Images/Valinor/TradeSkills/Silk_Cap.png" alt="Silk Cap"> Once you create the Silk Cap you will be updated. 
+                    <br>
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Silk Cap</span> to complete the quest.</span> Return to the <span class="light-red">Tailoring Trainer</span> to complete your task and start a new one.  
+                  </p>
+                  <hr> 
+                    <ul>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                    </ul>
+                  <hr>
+                  <h3 class="stages">Stage 6</h3>
+                  <p class="clearfix">
+                    The <span class="light-red">Tailoring Trainer</span> has an urgent request for you. She needs a Cloth Dress for the Daughter of Lord Trembley, but she is to busy right now to accomplish the task 
+                    <br>
+                    <span class="green">QUEST RECEIVED:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 1 Cloth Dress.</span>
+                    <br>
+                    Sewing a cloth dress requires <span class="light-green">Cloth</span> <img src="Images/Valinor/TradeSkills/Cloth.png" alt="Cloth"> and <span class="light-green">Scissors</span>. <img src="Images/Valinor/TradeSkills/Scissors.png" alt="Scissors"> You will need level <span class="light-red">7</span> and <span class="light-red">3</span> Cloth to craft the Cloth Dress.
+                    Cloth can be made by spinning cotton in to string, then weave the string in to cloth. If you don't want to grow cotton you can buy the string from Whiliam Rosen. 
+                    Click on the Scissors then on the Cloth to oepn the crafting window. Click on <span class="light-red">Armour</span> then on the Cloth Dress. <img src="Images/Valinor/TradeSkills/Cloth_Dress.png" alt="Cloth Dress"> Once you create the Cloth Dress you will be updated. 
+                    <br>
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Cloth Dress</span> to complete the quest.</span> Return to the <span class="light-red">Tailoring Trainer</span> to complete the final task.  
+                  </p>
+                  <hr> 
+                    <ul>
+                      <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                    </ul>
+                  <hr>
+                  You have completed your training in Tailoring.
+                  <p class="mt-4 py-3 text-center quest-complete">
+                  Quest Complete
+                </p>
+                  
+                </div>
+              </div>
+            </div>
+            <!-- End of Farming Trainer  --> 
+
             <footer class="jumbotron text-center">
               <a href="https://keithheffington.com" target="_blank"><p>Designed by Keith Heffington</p></a>
                 <p>&copy; <span id="date"></span></p> 
