--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -3577,9 +3577,11 @@
                     <span class="green">QUEST RECEIVED:</span><span class="red"> Farming Training</span><span class="orange">, Return to the Farming Trainer with 10 harvested wheat grains.</span>
                     <br>
                     If you didn't forge any weat seeds you can purchase them from . You will need your <span class="light-green">shovel</span> <img src="Images/Valinor/TradeSkills/Shovel.png" alt="Shovel"> and <span class="light-green">scythe</span> <img src="Images/Valinor/TradeSkills/Farm_Scythe.png" alt="Farm Scythe"> for this part of the task. Head to the farming patch south east of town. <img src="" alt="Farming Patch"> 
-                     Once you harvest 10 wheat grains you will be updated. 
+                    Use your <span class="light-green">shovel</span> on one of the farming spots and it will create a hole. <img src="" alt="Hole"> click on your wheat seed then on the hole to plant it. <img src="" alt="Seed Mound"> Now you wait for it to grow. Wheat grows in 3 stages. Stage 1: <img src="" alt="Wheat Stage One"> Stage 2: <img src="" alt="Wheat Stage Two"> Stage 3: <img src="" alt="Wheat Stage Three">
+                    After stage 3 the wheat is ready to be harvested. Use your <span class="light-green">Scythe</span> on the fully grown wheat. when successful you will receve <span class="light-green">Wheat Grain</span> <img src="" alt="Wheat Grain">
+                     Once you harvested 10 wheat grains you will be updated. 
                     <br>
-                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Silk Bandage</span> to complete the quest.</span> Return to the <span class="light-red">Tailoring Trainer</span> to complete your task and start a new one.  
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Wheat Grain</span> to complete the quest.</span> Return to the <span class="light-red">Farming Trainer</span> to complete your task and start a new one.  
                   </p>
                   <hr> 
                     <ul>
