--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -3384,7 +3384,7 @@
                   <p class="clearfix">
                     The <span class="light-red">Tailoring Trainer</span> she needs some help spinning some thread. She needs 20 silk thread to sew her sister a new dress.  
                     <br>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 20 Silk Threads.</span>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 20 Silk Threads.</span>
                     <br>
                     Spinning requires <span class="light-green">Raw Silk</span> and a spinning wheel. <img src="Images/Valinor/TradeSkills/Spinning_Wheel.png" alt="Spinning Wheel"> Click on the raw slik then the spinning wheel to begin spinning. If you are successful you will recieve Silk Thread. <img src="Images/Valinor/TradeSkills/Silk_Thread.png" alt="Silk Thread">    
                     Once you have created all 20 Silk Thread you will be updated.     
@@ -3400,7 +3400,7 @@
                   <p class="clearfix">
                     The <span class="light-red">Tailoring Trainer</span> she wants to test you skill at making silk cloth. Gather enough silk thread to weave 10 pieces of silk cloth.
                     <br>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 10 pieces of Silk Cloth.</span>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 10 pieces of Silk Cloth.</span>
                     <br>
                     Weaving silk cloth requries <span class="light-green">Silk Thread</span> and a Loom. <img src="Images/Valinor/TradeSkills/Loom.png" alt="Loom"> 
                     Click on the silk thread then on the loom to weave the silk thread in to silk cloth. <img src="Images/Valinor/TradeSkills/Silk_Cloth.png" alt="Silk Cloth"> Once you create the 10 pieces of silk cloth you will be updated.
@@ -3420,7 +3420,7 @@
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Scissors</span></li>
                         </ul>
                     <hr>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 20 Silk Bandages.</span>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 20 Silk Bandages.</span>
                     <br>
                     Sewing a silk bandages requires <span class="light-green">Silk Cloth</span> and <span class="light-green">Scissors</span>. <img src="Images/Valinor/TradeSkills/Scissors.png" alt="Scissors"> You will need level <span class="light-red">4</span> and <span class="light-red">1</span> Silk Cloth to craft the Silk Bandage.
                     Click on the Scissors then on the Silk Cloth to open the crafting window. Click on <span class="light-red">Misc/Tools</span> then on the Silk Bandage. <img src="Images/Valinor/TradeSkills/Silk_Bandage.png" alt=""> Once you create 20 Silk Bandage you will be updated. 
@@ -3436,7 +3436,7 @@
                   <p class="clearfix">
                     The <span class="light-red">Tailoring Trainer</span> has tasked you to try your hand at making a silk cap. 
                     <br>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 1 Silk Cap.</span>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 1 Silk Cap.</span>
                     <br>
                     Sewing a silk cap requires <span class="light-green">Silk Cloth</span> and <span class="light-green">Scissors</span>. <img src="Images/Valinor/TradeSkills/Scissors.png" alt="Scissors"> You will need level <span class="light-red">0</span> and <span class="light-red">1</span> silk Cloth to craft the Silk Cap.
                     Click on the Scissors then on the Silk Cloth to oepn the crafting window. Click on <span class="light-red">Armour</span> then on the Silk Cap. <img src="Images/Valinor/TradeSkills/Silk_Cap.png" alt="Silk Cap"> Once you create the Silk Cap you will be updated. 
@@ -3452,7 +3452,7 @@
                   <p class="clearfix">
                     The <span class="light-red">Tailoring Trainer</span> has an urgent request for you. She needs a Cloth Dress for the Daughter of Lord Trembley, but she is to busy right now to accomplish the task 
                     <br>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 1 Cloth Dress.</span>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 1 Cloth Dress.</span>
                     <br>
                     Sewing a cloth dress requires <span class="light-green">Cloth</span> <img src="Images/Valinor/TradeSkills/Cloth.png" alt="Cloth"> and <span class="light-green">Scissors</span>. <img src="Images/Valinor/TradeSkills/Scissors.png" alt="Scissors"> You will need level <span class="light-red">7</span> and <span class="light-red">3</span> Cloth to craft the Cloth Dress.
                     Cloth can be made by spinning cotton in to string, then weave the string in to cloth. If you don't want to grow cotton you can buy the string from Whiliam Rosen. 
@@ -3542,7 +3542,7 @@
                   <p class="clearfix">
                     The <span class="light-red">Farming Trainer</span> needs some orange seeds to plant a new crop of trees. You are to forage 5 orange seeds for him.  
                     <br>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Farming Training</span><span class="orange">, Return to the Farming Trainer with 5 foraged orange seeds.</span>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Farming Training</span><span class="orange">, Return to the Farming Trainer with 5 foraged orange seeds.</span>
                     <br>
                     Same task as the last forage untill you receive 5 <span class="light-green">orange seeds</span> <img src="Images/Valinor/TradeSkills/Orange_Seed.png" alt="Orange Seed">    
                     Once you have foraged 5 orange seeds you will be updated.     
@@ -3558,7 +3558,7 @@
                   <p class="clearfix">
                     The <span class="light-red">Farming Trainer</span> says it perfect growing weather for cherries. He can almost taste those freshly baked cherry pies already. He could use some help forageing 10 cherry seeds.
                     <br>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Farming Training</span><span class="orange">, Return to the Farming Trainer with 10 foraged cherry seeds.</span>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Farming Training</span><span class="orange">, Return to the Farming Trainer with 10 foraged cherry seeds.</span>
                     <br>
                     Same task as the last forage untill you receive 10 <span class="light-green">cherry seeds</span> <img src="Images/Valinor/TradeSkills/Cherry_Seed.png" alt="Cherry Seed">    
                     Once you have foraged 10 cherry seeds you will be updated.
@@ -3574,7 +3574,7 @@
                   <p class="clearfix">
                     The <span class="light-red">Farming Trainer</span> it seems you have made excellent use of your foraging stick. It's time to put that scythe to work. Plant and grow some wheat and bring him back some of your wheat grain. He will see how green your thumb really is.   
                     <br>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Farming Training</span><span class="orange">, Return to the Farming Trainer with 10 harvested wheat grains.</span>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Farming Training</span><span class="orange">, Return to the Farming Trainer with 10 harvested wheat grains.</span>
                     <br>
                     If you didn't forge any weat seeds you can purchase them from Leon Elias in the farming shop. <img src="Images/Valinor/TradeSkills/Framing_Shop_Sign.png" alt="Farming Shop Sign"> You will need your <span class="light-green">shovel</span> <img src="Images/Valinor/TradeSkills/Shovel.png" alt="Shovel"> and <span class="light-green">scythe</span> <img src="Images/Valinor/TradeSkills/Farm_Scythe.png" alt="Farm Scythe"> for this part of the task. Head to the farming patch south east of the castle. <img class="monster-img" src="Images/Valinor/Maps/Faming_Patch_Location.png" alt="Farming Patch Location"> 
                     Use your <span class="light-green">shovel</span> on one of the farming spots and it will create fresh soil . <img class="monster-img" src="Images/Valinor/TradeSkills/Fresh_Soil.png" alt="Fresh Soil"> click on your wheat seed then on the hole to plant it. <img class="monster-img" src="Images/Valinor/TradeSkills/Seed_Mound.png" alt="Seed Mound"> Now you wait for it to grow. Wheat grows in 3 stages. Wheat Seedling: <img src="Images/Valinor/TradeSkills/Wheat_Seedling.png" alt="Wheat Seedling"> Wheat Plant: <img src="Images/Valinor/TradeSkills/Wheat_Plant.png" alt="Wheat Plant"> Wheat Plant Blossomed: <img src="Images/Valinor/TradeSkills/WHeat_Plant_Blossomed.png" alt="Wheat Plant Blossomed">
@@ -3590,14 +3590,15 @@
                   <hr>
                   <h3 class="stages">Stage 5</h3>
                   <p class="clearfix">
-                    The <span class="light-red">Tailoring Trainer</span> has tasked you to try your hand at making a silk cap. 
+                    The <span class="light-red">Farming Trainer</span> needs to help out the town chef. The chef wants to bake some cinnamon sticks for someone's birthday, but he is all out of cinnamon right now.
+                    Your task is to grow a fresh cinnamon bundle. 
                     <br>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 1 Silk Cap.</span>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Farming Training</span><span class="orange">, Return to the Farming Trainer with 1 fresh cinnamon bundle.</span>
                     <br>
-                    Sewing a silk cap requires <span class="light-green">Silk Cloth</span> and <span class="light-green">Scissors</span>. <img src="Images/Valinor/TradeSkills/Scissors.png" alt="Scissors"> You will need level <span class="light-red">0</span> and <span class="light-red">1</span> silk Cloth to craft the Silk Cap.
-                    Click on the Scissors then on the Silk Cloth to oepn the crafting window. Click on <span class="light-red">Armour</span> then on the Silk Cap. <img src="Images/Valinor/TradeSkills/Silk_Cap.png" alt="Silk Cap"> Once you create the Silk Cap you will be updated. 
+                    You can't buy the <span class="light-green">Cinnamon seeds</span>, <img src="Images/Valinor/TradeSkills/Cinnamon_Seed.png" alt="Cinnamon Seed"> you will have to forage some if you didn't get any while you where foraging. Cinnamon gorws in 3 stages. Cinnamon Plant Seedling: <img src="Images/Valinor/TradeSkills/Cinnamon_Plant_Seedling.png" alt="Cinnamon Plant Seedling"> Cinnamon Plant <img src="Images/Valinor/TradeSkills/Cinnamon_Plant.png" alt="Cinnamon Plant"> Cinnamon Plant Blossomed <img src="Images/Valinor/TradeSkills/Cinnamon_Plant_Blossomed.png" alt="Cinnamon Plant Blossomed">
+                    When you the cinnamon is on Cinnamon Plant Bloosmed you can use your scythe to get your <span class="light-green">Cinnamon Bundle</span> <img src="Images/Valinor/TradeSkills/Cinnamon_Bundle.png" alt="Cinnamon Bundle"> Once you have harvested 1 fresh Cinnamon Bundle you will be updated. 
                     <br>
-                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Silk Cap</span> to complete the quest.</span> Return to the <span class="light-red">Tailoring Trainer</span> to complete your task and start a new one.  
+                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Cinnamon Bundle</span> to complete the quest.</span> Return to the <span class="light-red">Farming Trainer</span> to complete your task and start a new one.  
                   </p>
                   <hr> 
                     <ul>
@@ -3606,22 +3607,22 @@
                   <hr>
                   <h3 class="stages">Stage 6</h3>
                   <p class="clearfix">
-                    The <span class="light-red">Tailoring Trainer</span> has an urgent request for you. She needs a Cloth Dress for the Daughter of Lord Trembley, but she is to busy right now to accomplish the task 
+                    The <span class="light-red">Farming Trainer's</span> favorite foraging stick is missing. He heard the goblins have once agin managed to sneak into town. The Goblin Farmer probably swiped his favorite foraging stick during their raid.  
                     <br>
-                    <span class="green">QUEST RECEIVED:</span><span class="red"> Tailor Training</span><span class="orange">, Return to the Tailoring Trainer with 1 Cloth Dress.</span>
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Farming Training</span><span class="orange">, Slay the Goblin Farmer and return the stolen foraging stick to the Farming Trainer.</span>
                     <br>
-                    Sewing a cloth dress requires <span class="light-green">Cloth</span> <img src="Images/Valinor/TradeSkills/Cloth.png" alt="Cloth"> and <span class="light-green">Scissors</span>. <img src="Images/Valinor/TradeSkills/Scissors.png" alt="Scissors"> You will need level <span class="light-red">7</span> and <span class="light-red">3</span> Cloth to craft the Cloth Dress.
-                    Cloth can be made by spinning cotton in to string, then weave the string in to cloth. If you don't want to grow cotton you can buy the string from Whiliam Rosen. 
-                    Click on the Scissors then on the Cloth to oepn the crafting window. Click on <span class="light-red">Armour</span> then on the Cloth Dress. <img src="Images/Valinor/TradeSkills/Cloth_Dress.png" alt="Cloth Dress"> Once you create the Cloth Dress you will be updated. 
+                    <img class="npc-img" src="Images/Valinor/Monsters/Goblin_Farmer.png" alt="Goblin Farmer">
+                    This map shows the location of the Goblin Farmer. <img class="npc-img" src="Images/Valinor/Maps/Goblin_Farmer_Location.png" alt="Map of the location of Goblin Farmer">The Goblin Farmer often prowls around the fields just outside the castle walls. Find the Goblin Farmer in the south east corner of the fields.
+
                     <br>
-                      <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enough<span class="green"> Cloth Dress</span> to complete the quest.</span> Return to the <span class="light-red">Tailoring Trainer</span> to complete the final task.  
+                    <span class="green">QUEST UPDATE:</span><span class="red"> Farming Training</span><span class="orange">, Return the foraging stick to the Farmer Trainer.</span>  
                   </p>
                   <hr> 
                     <ul>
                       <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
                     </ul>
                   <hr>
-                  You have completed your training in Tailoring.
+                  You have completed your training in Farming.
                   <p class="mt-4 py-3 text-center quest-complete">
                   Quest Complete
                 </p>
