Completed Ancient Magic Quest

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -94,6 +94,9 @@
                         <li>
                           <a href="#veratti">Veratti</a>
                         </li>
+                        <li>
+                          <a href="#ancientMagic">Ancient Magic</a>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -1671,6 +1674,92 @@
                           <hr>  
                           <ul>
                             <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Undead Cocktail</span></li>
+                          </ul>
+                          <hr>
+ 
+                        </P>
+
+                        <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                    </div>
+                  </div>
+                </div>
+                <!-- End of Verattie  -->
+                <div class="line"></div>
+                 <!-- Start of Ancient Magic  -->
+                 <div class="card bg-main half-width mb-5">
+                  <div class="card-header">
+                    <h2 id="ancientMagic" class="anchor text-center">Ancient Magic</h2>
+                  </div>
+                  <div>
+                    <div class="card-body">
+                      <table class="table table-sm table-bordered text-center">
+                        <thead class="thead-light">
+                          <tr>
+                            <th>Difficulty</th>
+                            <th>Skills</th>
+                            <th>Items</th>                            
+                          </thead>    
+                          </tr>
+                          <tr>
+                            <td>Apprentice</td>
+                            <td>Combat</td>
+                            <td>Skeletal Skull <br>
+                              <img class="thumbnail-img" src="Images/Valinor/Items/Items/Skeletal_Skull.png" alt="Skeletal Skull"></td>
+                      </table>
+                      <table class="table table-sm table-bordered text-center">
+                        <thead class="thead-light">
+                          <tr>
+                            <th>NPC Quest Start</th>
+                            <th>Monster</th>
+                            <th>Reward</th>
+                          </thead>    
+                          </tr>
+                          <tr>
+                            <td>
+                              Crazy Hermit
+                            </td>
+                            <td>
+                              Skeletal Apprentice (lvl 8)
+                            </td> 
+                            <td>
+                              <img class="thumbnail-img" src="Images/Valinor/Items/Weapons/Rune_of_Mind.png" alt="Rune of Mind">
+                              <img class="thumbnail-img" src="Images/Valinor/Items/Weapons/Rune_of_Body.png" alt="Rune of Body">
+                              <img class="thumbnail-img" src="Images/Valinor/Items/Weapons/Rune_of_Soul.png" alt="Rune of Soul">
+                              <img class="thumbnail-img" src="Images/Valinor/Items/Weapons/Rune_of_Nature.png" alt="Rune of Nature">
+                            </td>                        
+                      </table>
+                      <table class="table table-sm table-bordered text-center">
+                        <thead class="thead-light">
+                          <tr>
+                            <th>Quest Stages</th>
+                          </thead>    
+                          </tr>
+                          <tr>
+                            <td>1</td>
+                          </tr>
+                                               
+                      </table>
+                      <hr>
+                      <p class="clearfix">
+                        <img class="npc-img" src="Images/Valinor/NPCS/Crazy_Hermit.png" alt="Crazy Hermit">
+                        Speak to the<span class="light-red">Crazy Hermit</span>, he is studying magic and needs your help. Bring back 10 skulls of Skeletal Apprentice to help with his research.
+                        He has paid a steep price to study this ancient magic. They feared it would attract the undead, and forbabe him to practice in the castle.  
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Ancient Magic</span><span class="orange">, Bring 10 Skeletal Skulls from Skeletal Apprentices to the Crazy Hermit.</span>
+
+                      </p>
+                      <p>
+                        Head south from the Crazy Hermits location untill you find some <span class="red">Skeletal Apprentices</span> <img class="monster-img" src="Images/Valinor/Monsters/Skeletal_Apprentice.png" alt="Skeletal Apprentice"> and kill them. They will drops <span class="light-green">skeletal skulls</span> <img src="Images/Valinor/Items/Items/Skeletal_Skull.png" alt="Skeletal Skull"> 100% of the time. When you have collected 10 you will be updated.
+                        Return to the Crazy Hermit for your reward.
+                       <br>
+                        <span class="green">QUEST UPDATE:</span><span class="orange"> You have collected enougth</span><span class="green"> Skeletal Skull </span><span class="orange">to complete the quest.</span> <br>
+                        Speak to the <span class="light-red">Crazy Hermit</span> again to be rewared with an option between Rune of Mind, Rune of Body, Rune of Soul, or Rune of Nature. Bring him more skulls to be rewarded again.
+                          <hr>  
+                          <ul>
+                            <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Magic Rune Chose</span></li>
+                            <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1,320</strong> Experience pool <span class="light-red">experience may very</span></li>
                           </ul>
                           <hr>
  
