--- a/quest.html
+++ b/quest.html
@@ -151,8 +151,8 @@
 
             <div class="line"></div>
             <h3 id="blackSwamp" class="anchor">Black Swamp</h3>
-            <p>Comeing Soon</p>
-            <button type="button" class="btn btn-dark"><a href="#">Black Swamp</a></button>
+            <p>Black swamp is the home of the orcs. These quest are for the towns of Krog, Maraket and Samad.</p>
+            <button type="button" class="btn btn-dark"><a href="blackSwamp.html">Black Swamp</a></button>
 
             <div class="line"></div>
             <h3 id="highlands" class="anchor">Highlands</h3>
