Completed Leonard is Lost Quest

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -210,7 +210,7 @@
               <!-- Quest Map and Location -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
-                  <h1 id="valinorMap" class="anchor text-center">Black Swamp</h1>
+                  <h1 id="blackSwampMap" class="anchor text-center">Black Swamp</h1>
                 </div>
                 <div>
                   <div class="card-body img-center">
@@ -329,15 +329,16 @@
                         you will be updated. 
                         <br>
                         <span class="green">QUEST RECEIVED:</span><span class="red"> Warrior of Krog</span><span class="orange">, Return to Lord Targon in Krog!</span>
+                        <br>
+                        <span class="light-red">Targon</span> praises you for you a job well done.
+                        <br>
+                        You have gained faction with Krog for your heroic work! See Lady Targon of Maraket about a reward.
                         <hr>
                         <ul>
                           <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained X amount of faction with the city of Krog</span></li>
                           <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">Ramdon Amounts</strong> Experience Pool <span class="light-red">experience may very</span></li>
                         </ul>  
-                        <hr>                       
-                        
-                        <br>
-                       You have gained faction with Krog for your heroic work! See Lady Targon of Maraket about a reward.
+                        <hr>
                     </p>
                     <p>
                       <img class="npc-img" src="Images/BlackSwamp/Lady_Targon.png" alt="Lady Targon">
@@ -360,6 +361,70 @@
                 </div>
               </div>
               <!-- End of Warrior of Krog -->
+              <div class="line"></div>
+              <!-- Start of Leonard is Lost -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="leonardIsLost" class="anchor text-center">Leonard is Lost</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Searching</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Oonga
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Gold_350.png' alt='Gold 350'>">
+
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Oonga.png" alt="Oonga">
+                        Speak to <span class="light-red">Oonga</span> He is crying about someone or something named Leonard. Leonard is Oonga special friend. He is hiding from Oonga help him find Leonard. 
+                        He gives you a hint that Leonard is lazy and likes to take a nap in a barrel-thing.
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Leonard is Lost</span><span class="orange">, You agreed to help Oonga of Krog find Leonard, a lost pet.</span>
+                        <br>
+                        There are many barrels in the town to search. The barrel you are looking for is the one on the west side of the government hall. <img class="npc-img" src="Images/BlackSwamp/Leonard_barrel.png" alt="Leonards barrel">
+                        When you search the barrel. A strong stench flows forth from the barrel as you per inside. At the bottome lies what looks like it may have been a squirrel at one time. You gently pick up the partially decayed remains,
+                        brushing flies away with your other hand. Placeing the carcass into a small leather sack, you ponder how you will break the news to Oonga.
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Leonard is Lost</span><span class="orange">, Return to Oonga with Leonard's remains.</span>
+                        <br>
+                        He thanks you for finding Leonard and scoldes Leonard for being a bad pet.  
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">Gold Received: 350</span></li>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained 250 faction with the city of Krog</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">660</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>  
+                    </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Leonard is Lost -->
               <div class="line"></div>
 
               <footer class="jumbotron text-center">
