Added Protect Krog Quest

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -426,6 +426,78 @@
               </div>
               <!-- End of Leonard is Lost -->
               <div class="line"></div>
+              <!-- Start of Protect Krog! -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="protectKrog" class="anchor text-center">Protect Krog!</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Warrog
+                          </td>
+                          <td>
+                            <img class="thumbnail-img" src="Images/BlackSwamp/Gold.png" alt="Gold" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/BlackSwamp/Gold_350.png' alt='Gold 350'>">
+
+                          </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/BlackSwamp/Warrog.png" alt="Warrog">
+                        Speak to <span class="light-red">Warrog</span> ask if you would take up arms against evil and strike a blow for the great Orc city of Krog! Evil creatures attack people as they travel to and from the city. Many younglings have perished merely by travelling though the nearby plains and hills. 
+                        He wants you to seek out and kill a Kobold, a Snake, and a Bat.                       
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Protect Krog!</span><span class="orange">, Show your prowess to Warrog a priest in Krog! Hunt a Kobold, Snake, and Bat.</span>
+                        <br>
+                        You shall find <span class="light-red">Kobolds </span> <img class="monster-img" src="Images/NPC/Monsters/Kobold.png" alt="Kobold"> to the south, and <span class="light-red">Snakes </span> <img class="monster-img" src="Images/NPC/Monsters/Snake.png" alt="Snake"> and <span class="light-red">Bats </span> <img class="monster-img" src="Images/NPC/Monsters/Bat.png" alt="Bat">
+                        roam freely across the plains.When you kill one of the creatures you will recieve an update. 
+                        <br> 
+                        <span class="green">QUEST UPDATE: You have slain a Snake for Krog!</span>
+                        <br> 
+                        <span class="green">QUEST UPDATE: You have slain a Bat for Krog!</span>
+                        <br> 
+                        <span class="green">QUEST UPDATE: You have slain a Kobold for Krog!</span>
+                        <br>
+                        When all three have been slan you will recieve the final update to return to Warrog to recieve your reward.
+                        <br>
+                        <span class="green">QUEST UPDATE:</span><span class="red"> Protect Krog!</span><span class="orange">, You have completed Warrog's Quest! Return to the Temple of Ulthien.</span>
+                        <br>
+                        What have you killed so far... You have killed a kobold! You have killed a snake! You have killed a bat! You have proven yourself for Krog! If you have need of my services, you know 
+                        where to find me! As alwasy, may Ulthien bless and guide you.  
+                        <hr>
+                        <ul>
+                          <li><i class="fas fa-caret-right"></i><span class="ml-2 green">You have gained 200 faction with the city of Krog</span></li>
+                          <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">???</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        </ul>
+                        <hr>
+                        You were blessed by Warrog for protecting Krog. Return to Warrog for healing when needed.  
+                    </p>
+                        
+                  </div>
+                </div>
+              </div>
+              <!-- End of Leonard is Lost -->
+              <div class="line"></div>
 
               <footer class="jumbotron text-center">
               <a href="https://keithheffington.com" target="_blank"><p>Designed by Keith Heffington</p></a>
